fix menu-drawer spacing

--- a/main.css
+++ b/main.css
@@ -59,7 +59,7 @@ body {
     font-size: 0.75em;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;;
+    justify-content: space-evenly;
     width: 100%;
     height: 5%;
     position: absolute;
